new Boolean -> Boolean.valueOf. (Reported by FindBugs)
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/lang/trunk@489734 13f79535-47bb-0310-9956-ffa450edef68